<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_photo"
    android:orientation="vertical"
    android:gravity="center"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActiveMembers"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:paddingTop="3dp"
            android:text="@string/active_members_0"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeletedMembers"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:paddingTop="3dp"
            android:text="@string/deleted_members_0"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAddUsers"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/background"
        android:text="@string/add_user"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btUpdateUser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background"
        android:text="@string/update_user"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background"
        android:text="@string/status"
        android:textAlignment="center"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>